working sample with id.conube.com.br

--- a/examples/express2/package.json
+++ b/examples/express2/package.json
@@ -2,14 +2,17 @@
   "name": "oauth2orize-example",
   "version": "0.0.0",
   "dependencies": {
-    "express": "2.x.x",
+    "connect-ensure-login": "0.1.x",
     "ejs": "0.7.x",
+    "express": "2.x.x",
     "oauth2orize": "0.x.x",
     "passport": "~0.1.12",
-    "passport-local": "0.1.x",
     "passport-http": "0.2.x",
     "passport-http-bearer": "0.2.x",
+    "passport-local": "0.1.x",
     "passport-oauth2-client-password": "0.1.x",
-    "connect-ensure-login": "0.1.x"
+    "passport-oauth2-resource-owner-password": "^1.0.0",
+    "request": "^2.58.0",
+    "simple-oauth2": "^0.2.1"
   }
 }
